@@ -12,6 +12,10 @@
 	not all plots need to call that routine for anything else.
 	Move the plot style lookup into a separate routine.
 
+	* src/datafile.c (df_add_binary_records):
+	Remove dead code (error checks that can never be reached).
+	Make some internal bookkeeping variables df_* static.
+
 2015-08-24  Ethan A Merritt  <merritt@u.washington.edu>
 	
 	* src/datafile.c (df_readascii):  The code supporting an input format
